syntax = "proto3";

option java_package = "org.bitcoindevkit.devkitwallet.data";
option java_multiple_files = true;

message IntroDone {
  bool introDone = 1;
}

message ActiveWallets {
  repeated SingleWallet wallets = 1;
}

message SingleWallet {
  string name = 1;
  ActiveWalletNetwork network = 2;
  ActiveWalletScriptType scriptType = 3;
  string descriptor = 4;
  string changeDescriptor = 5;
  string recoveryPhrase = 6;
}

enum ActiveWalletNetwork {
  TESTNET = 0;
  SIGNET = 1;
  REGTEST = 2;
}

enum ActiveWalletScriptType {
  P2WPKH = 0;
  P2TR = 1;
}
